--- a/src/app/comun/index/index.component.html
+++ b/src/app/comun/index/index.component.html
@@ -1,8 +1,10 @@
 
 <!-- Diseño Fondo --> 
-<video *ngIf="appService.dispositivo=='Desktop'" autoplay class="video-fondo" id="video-fondo" muted loop poster="assets/General/papiro.jpg">
-  <source muted src="assets/videos/video-fondo.mp4" type="video/mp4"/>
-</video>
+
+
+<video *ngIf="appService.dispositivo=='Desktop'" autoplay class="video-fondo" id="video-fondo" oncanplay="this.muted=true" loop poster="assets/General/papiro.jpg">
+  <source src="assets/videos/video-fondo.mp4" type="video/mp4"/>
+</video> 
 
 <img src="assets/General/papiro.jpg" class="Fondo-papiro" alt="Fondo-papiro">
 
