Rediseño pantalla index y carga

--- a/src/app/comun/carga/carga.component.html
+++ b/src/app/comun/carga/carga.component.html
@@ -1,10 +1,7 @@
 
 
 <div *ngIf="mostrarPantallaCarga" id="PantallaCarga" [style.opacity]="opacidad">
-	<div class="tituloCarga Texto1">Cargando...</div>
-	<div class="subtituloCarga Texto2">{{subtituloCarga}}</div>
-	<div class="contenedorBarraCarga">
-		<div class="barraCarga" [style.width]="progreso" ></div>
-	</div>
-	
+	<img class="logo animacionCarga" src="../../../assets/General/Icono-Delirium.png"> 
+	<div class="tituloCarga Texto1">Consejo</div>
+	<div class="subtituloCarga Texto2">Si quereis sobrevivir elegid con cuidado vuestra composición de equipo.</div>
 </div>
