--- a/src/app/comun/dialogos/dialogos.component.sass
+++ b/src/app/comun/dialogos/dialogos.component.sass
@@ -1,49 +1,60 @@
+ 
+@import "../../../variables.sass"
+
+::ng-deep .fondoDialogo
+    background-color: rgba(black, 0.4)
+
 ::ng-deep .generalContainer
+  display: flex
+  justify-content: center
+  align-items: center
+
   .mat-dialog-container
+    position: absolute !important
+    width: 50%
+    height: 20%
     min-width: 40vw
     min-height: 20vh
-    background-color: rgba(black, 0.9)
-    box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.7)
-    border: white double 10px
     color: white
-    padding: 10px 24px
+    padding: 0
+    overflow: initial
+
+  .contenedor
+    position: absolute
+    width: 100%
+    height: 100%
+    color: white
+    background-color: $colorFondo2
+
+    .frame
+        position: absolute
+        top: 0 
+        left: 0 
+        padding-top: 5%
+        margin-top: -2.5%
+        padding-left: 3%
+        margin-left: -1.5%
+        width: 100%
+        height: 100%
+        background-image: url("../../../assets/Frames/Frame-Dialogo.png")
+        background-size: 100% 100% 
 
     .title
-      margin: 0 0
+        margin-top: 20px
+        width: 100%
+        text-align: center
 
-    .mat-input-element
-      caret-color: white
-    .mat-form-field-appearance-legacy .mat-form-field-label      
-      color: rgba(255,255,255,0.5)
-    .mat-form-field-underline
-      background-color: white
+    .textoDialogo
+        margin-top: 20px
+        width: 100%
+        text-align: center
 
-    .botones
-      position: relative
-      display: flex
-      bottom: 0
-      min-height: 30px
-      margin: 10px 0
-      padding: 0
-      justify-content: center
-
-      .ajustesOpcion
-        position: absolute
-        display: flex
-        bottom: 0
+    .botonUnico
+        position: relative
+        display: block
         width: 30%
-        height: 100%
-        align-items: center
-        justify-content: center
-        color: white
-        background-color: rgba(black, 0.9)
+        margin-top: 20px
+        left: 50%
+        margin-left: -15%
 
-      .ajustesOpcion:hover
-        background-color: rgba(255, 255, 255, 0.2) 
-        color: white
-
-      .OK
-        right: 10%
-      .Cancel
-        left: 10%
 
