--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,6 @@
 
 @import "~jsoneditor/dist/jsoneditor.min.css";
+@import "./breakpoints.scss";
 
 @font-face
 	font-family: "TangerineLocal"
@@ -8,33 +9,54 @@
 	font-family: "GeographicaHandLocal"
 	src: url(./fonts/GeographicaHand.ttf)
 
+	font-family: "Chancery"
+	src: url(./fonts/Apple-Chancery.ttf)
+
 html
 	margin: 0
 	padding: 0
 	overflow: hidden
 	color: #291905
+
 body
 	margin: 0
 	padding: 0
 	//font-family: 'Tangerine','TangerineLocal', cursive
-	font-family: 'GeograficaHandLocal'
+	font-family: 'Chancery'
 	overflow-x: hidden
 	overflow-y: hidden
 	cursor: url(assets/Cursor/Metal_Norm.cur), pointer
 
 .Texto1
 	font-size: 40px
-	@media only screen and (min-width: 600px) //Pantallas mas de 600px
-		font-size: 50px
+	@include media("<=desktop")
+		font-size: 40px
+	@include media("<=tablet")
+		font-size: 40px
+	@include media("<=phone")
+		font-size: 40px
+	@include media("<=smphone")
+		font-size: 40px
 
 .Texto2
-	font-size: 20px
-	@media only screen and (min-width: 600px)
+	font-size: 30px
+	@include media("<=desktop")
 		font-size: 30px
-
+	@include media("<=tablet")
+		font-size: 30px
+	@include media("<=phone")
+		font-size: 30px
+	@include media("<=smphone")
+		font-size: 30px
 .Texto3
-	font-size: 10px
-	@media only screen and (min-width: 600px)
+	font-size: 20px
+	@include media("<=desktop")
+		font-size: 20px
+	@include media("<=tablet")
+		font-size: 20px
+	@include media("<=phone")
+		font-size: 20px
+	@include media("<=smphone")
 		font-size: 20px
 
 // Base de formatos:
